welcome.lessons.welcome.summative.Moria.scala.code

circuit()

def circuit(){
	while(!estSurBiscuit())
  avance()
if (estSurbiscuit()){
  porteBiscuit()}
}

def porterBiscuit(){
  prendBiscuit()
  retourne()
  while(!estSurBiscuit())
  avance()
}